time, based on timeline location.
- Some tweaks for improved performance
- More changes to the loader architecture, allowing asynchronous loads to be 
cancelled, a default loader to be used, and even easier creation of new loaders
- Added support for getting timemap state from the URL hash
- Added support for loading extra data from arbitrary Google Spreadsheet columns
- Added a templating concept for info window data
- Additions and tweaks to documentation

Version 1.5
-----------
- Fairly substantial changes to the loader architecture - should make everything a
little cleaner, and allows implementation of service-specific loaders (e.g.
Flickr, etc). IMPORTANT: Loader files have moved to the loaders/ directory.
- Some changes to TimeMap.init() syntax - the only things not backwards-compatible
are the preloadFunction and transformFunction params, which should now go in an
options object within the dataset object.
- Cleaned up theme namespace: changed TimeMapDatasetTheme to TimeMapTheme and put 
pre-set theme functions into TimeMap.themes. Setting theme by string (e.g. "blue")
is fully backwards-compatible, but the syntax for using functions has changed.
- Cleaned up utility namespace: moved utility functions to TimeMap.util
- Added documentation via jsdoc-toolkit, and cleaned up the comments to provide
better documentation
- Added loaders for JSON strings, Google Spreadsheets, and Flickr
- Added polyline and polygon support to GeoRSS
- Added support for multiple geometries in KML

Version 1.4
-----------
- Added support, tests, and one example for Timeline v.2.2.0
- Added local optimized copy of Timeline v.1.2
- Added GeoRSS parser (points only)
- Moved KML parser to separate file. NOTE: You now need to load kmlparser.js
separately to load KML, unless you are using timemap_full.pack.js.
- Improvements to default date parser
- Added several new examples: Google spreadsheet, lines between points, polytween
- New tests and small bugfixes

Version 1.3
-----------