@@ -15,7 +15,8 @@ time, based on timeline location.
 cancelled, a default loader to be used, and even easier creation of new loaders
 - Added support for getting timemap state from the URL hash
 - Added support for loading extra data from arbitrary Google Spreadsheet columns
-- Added a templating concept for info window data
+- Added a templating support for info window data
+- Added timestamp support to TimeMapDataset.hybridParser
 - Additions and tweaks to documentation
 
 Version 1.5
